# succinct

./: .stylish-haskell.yaml  README.md  cabal.project  project.sh  succinct.cabal
.github/workflows/: haskell.yml
components/succinct-balancedparens--bench/: Main.hs
components/succinct-balancedparens--doctest/: DoctestDriver.hs  config.json
components/succinct-balancedparens-gen/HaskellWorks/Data/BalancedParens/: Gen.hs
components/succinct-balancedparens/app/App/Commands/: BitsToParens.hs  ParensToBits.hs  Positions.hs
components/succinct-balancedparens/bench/: Main.hs
components/succinct-balancedparens/doctest/: DoctestDriver.hs  config.json
components/succinct-bits--doctest/: DoctestDriver.hs  config.json
components/succinct-bits--test/HaskellWorks/Data/Bits/: BitReadSpec.hs  BitWiseSpec.hs  FromBitTextByteStringSpec.hs
components/succinct-bits/HaskellWorks/Data/Bits/: BitRead.hs  BitShow.hs  BitWise.hs  ElemFixedBitSize.hs
components/succinct-core/bench/: Main.hs
components/succinct-core/bench/Bench/: BalancedParens.hs  Excess.hs  RankSelect.hs  RankSelectBase.hs
components/succinct-core/doctest/: DoctestDriver.hs  config.json
components/succinct-core/src/Data/Succinct/: BalancedParens.hs  Excess.hs  MQuery.hs  Parser.hs
components/succinct-core/test/Data/Succinct/: MQuerySpec.hs
components/succinct-core/test/Test/: Common.hs
components/succinct-dsv--bench/: Main.hs
components/succinct-dsv--doctest/: DoctestDriver.hs  config.json
components/succinct-dsv--weigh/: Space.hs
components/succinct-dsv/app/App/Commands/: CreateIndex.hs  Generate.hs  IndexWord8s.hs  QueryLazy.hs  QueryStrict.hs  RangeJoin.hs
components/succinct-dsv/app/App/Data/: ColumnDesc.hs  List.hs  RangeJoinColumn.hs
components/succinct-dsv/bench/: Main.hs
components/succinct-dsv/doctest/: DoctestDriver.hs  config.json
components/succinct-dsv/test/Data/Succinct/: DsvSpec.hs
components/succinct-dsv/weigh/: Space.hs
components/succinct-excess--doctest/: DoctestDriver.hs  config.json
components/succinct-excess/bench/: Main.hs
components/succinct-excess/doctest/: DoctestDriver.hs  config.json
components/succinct-int--doctest/: DoctestDriver.hs  config.json
components/succinct-json--doctest/: DoctestDriver.hs  config.json
components/succinct-json-examples/src/: Example2.hs  Example3.hs  Example4.hs
components/succinct-json-simd--doctest/: DoctestDriver.hs  config.json
components/succinct-json-simd/app/App/: Lens.hs
components/succinct-json-simd/app/App/Commands/: Capabilities.hs  CreateIndex.hs
components/succinct-json-simd/doctest/: DoctestDriver.hs  config.json
components/succinct-json-simple-cursor--doctest/: DoctestDriver.hs  config.json
components/succinct-json-simple-cursor/app/App/Commands/: CreateIndex.hs  Types.hs
components/succinct-json-simple-cursor/bench/: Main.hs
components/succinct-json-simple-cursor/doctest/: DoctestDriver.hs  config.json
components/succinct-json-standard-cursor--bench/: Main.hs
components/succinct-json-standard-cursor--doctest/: DoctestDriver.hs  config.json
components/succinct-json-standard-cursor/bench/: Main.hs
components/succinct-json-standard-cursor/doctest/: DoctestDriver.hs  config.json
components/succinct-json-tests/Data/Succinct/Json/: LightJsonSpec.hs  TypeSpec.hs  ValueSpec.hs
components/succinct-json/app/App/Commands/: Count.hs  CountAeson.hs  CreateIndex.hs  Demo.hs  Types.hs
components/succinct-json/bench/: Main.hs
components/succinct-json/doctest/: DoctestDriver.hs  config.json
components/succinct-mquery--doctest/: DoctestDriver.hs  config.json
components/succinct-mquery/app/: Main.hs
components/succinct-mquery/doctest/: DoctestDriver.hs  config.json
components/succinct-mquery/src/Data/Succinct/: MQuery.hs
components/succinct-parser--doctest/: DoctestDriver.hs  config.json
components/succinct-parser/doctest/: DoctestDriver.hs  config.json
components/succinct-parser/src/Data/Succinct/: Parser.hs
components/succinct-rankselect--app/: Main.hs
components/succinct-rankselect--app/App/Commands/: Build.hs  SelectAll.hs  UnitTest.hs
components/succinct-rankselect--bench/: Main.hs
components/succinct-rankselect--doctest/: DoctestDriver.hs  config.json
components/succinct-rankselect--test/HaskellWorks/Data/RankSelect/: CsPoppySpec.hs  ValidateSpec.hs
components/succinct-rankselect--test/Test/: Common.hs
components/succinct-rankselect-base--doctest/: DoctestDriver.hs  config.json
components/succinct-rankselect-base/bench/: Main.hs
components/succinct-rankselect-base/doctest/: DoctestDriver.hs  config.json
components/succinct-rankselect-gen/HaskellWorks/Data/RankSelect/: Gen.hs
components/succinct-rankselect/HaskellWorks/Data/RankSelect/: CsPoppy.hs
components/succinct-rankselect/app/: Main.hs
components/succinct-rankselect/app/App/Commands/: Build.hs  SelectAll.hs  UnitTest.hs  Validate.hs
components/succinct-rankselect/bench/: Main.hs
components/succinct-rankselect/doctest/: DoctestDriver.hs  config.json
components/succinct-rankselect/test/Test/: Common.hs
components/succinct-simd--bench/: Main.hs
components/succinct-simd--doctest/: DoctestDriver.hs  config.json
components/succinct-simd/bench/: Main.hs
components/succinct-simd/doctest/: DoctestDriver.hs  config.json
components/succinct-string-parse--doctest/: DoctestDriver.hs  config.json
components/succinct-string-parse/HaskellWorks/Data/String/: Parse.hs
components/succinct-string-parse/doctest/: DoctestDriver.hs  config.json
components/succinct-xml--app/App/Commands/: Demo.hs
components/succinct-xml--bench/: Main.hs
components/succinct-xml--doctest/: DoctestDriver.hs  config.json
components/succinct-xml/app/App/: Naive.hs
components/succinct-xml/app/App/Commands/: Count.hs  Demo.hs  (+5 more)
components/succinct-xml/bench/: Main.hs
components/succinct-xml/doctest/: DoctestDriver.hs  config.json
components/succinct/app/: Main.hs
demo/: hw-json-demo.cabal  succinct-demo.cabal
demos/: succinct-demo.cabal
doctest/: DoctestDriver.hs
src/HaskellWorks/Data/Json/: LightJson.hs
(+411 files in other folders)
