cabal-version:  3.4

name:                   succinct
version:                0.0.0.1
synopsis:               Memory efficient JSON parser
description:            Memory efficient JSON parser. Please see README.md
category:               Data
homepage:               http://github.com/haskell-works/succinct#readme
bug-reports:            https://github.com/haskell-works/succinct/issues
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016-2024 John Ky
license:                BSD-3-Clause
license-file:           LICENSE
tested-with:            GHC == 9.8.2, GHC == 9.6.6
build-type:             Simple
extra-source-files:     README.md
                        corpus/json/5000B.json
                        corpus/json/5000B.json.bp.idx
                        corpus/json/5000B.json.ib.idx
                        corpus/json/issue-0001.json
                        corpus/json/issue-0001.json.bp.idx
                        corpus/json/issue-0001.json.ib.idx
                        corpus/json/issue-0001.md

source-repository head
  type: git
  location: https://github.com/haskell-works/succinct

flag bmi2
  description:  Enable bmi2 instruction set
  manual:       False
  default:      False

flag sse42
  description:  Enable sse4.2 instruction set
  manual:       False
  default:      False

common base                           { build-depends: base                           >= 4.11       && < 5      }

common aeson                          { build-depends: aeson                          >= 2.0        && < 2.3    }
common array                          { build-depends: array                          >= 0.5        && < 0.6    }
common attoparsec                     { build-depends: attoparsec                     >= 0.13       && < 0.15   }
common attoparsec-aeson               { build-depends: attoparsec-aeson               >= 2          && < 3      }
common bits-extra                     { build-depends: bits-extra                     >= 0.0.1.3    && < 0.1    }
common bytestring                     { build-depends: bytestring                     >= 0.10.6     && < 0.13   }
common cassava                        { build-depends: cassava                        >= 0.5.1.0    && < 0.6    }
common conduit                        { build-depends: conduit                        >= 1.2        && < 1.4    }
common containers                     { build-depends: containers                     >= 0.5        && < 0.8    }
common criterion                      { build-depends: criterion                      >= 1.4        && < 1.7    }
common deepseq                        { build-depends: deepseq                        >= 1.4        && < 1.6    }
common directory                      { build-depends: directory                      >= 1.3        && < 1.4    }
common dlist                          { build-depends: dlist                          >= 0.8        && < 1.1    }
common doctest                        { build-depends: doctest                        >= 0.16.2     && < 0.23   }
common doctest-discover               { build-depends: doctest-discover               >= 0.2        && < 0.3    }
common filepath                       { build-depends: filepath                       >= 1.4        && < 1.6    }
common generic-lens                   { build-depends: generic-lens                   >= 1.2.0.1    && < 2.3    }
common hedgehog                       { build-depends: hedgehog                       >= 0.6        && < 1.5    }
common hspec                          { build-depends: hspec                          >= 2.4        && < 3      }
common hw-balancedparens              { build-depends: hw-balancedparens              >= 0.3.0.0    && < 0.5    }
common hw-bits                        { build-depends: hw-bits                        >= 0.7.0.5    && < 0.8    }
common hw-fingertree                  { build-depends: hw-fingertree                  >= 0.1.1.0    && < 0.2    }
common hw-hedgehog                    { build-depends: hw-hedgehog                    >= 0.1.0.1    && < 0.2    }
common hw-hspec-hedgehog              { build-depends: hw-hspec-hedgehog              >= 0.1.0.4    && < 0.2    }
common hw-json-simd {
  if arch(x86_64)
    build-depends: hw-json-simd               >= 0.1.0.2    && < 0.2
}
common hw-mquery                      { build-depends: hw-mquery                      >= 0.2.0.0    && < 0.3    }
common hw-parser                      { build-depends: hw-parser                      >= 0.1        && < 0.2    }
common hw-prim                        { build-depends: hw-prim                        >= 0.6.2.32   && < 0.7    }
common hw-rankselect-base             { build-depends: hw-rankselect-base             >= 0.3.2.1    && < 0.4    }
common lens                           { build-depends: lens                           >= 4          && < 6      }
common mmap                           { build-depends: mmap                           >= 0.5        && < 0.6    }
common mtl                            { build-depends: mtl                            >= 2.2        && < 3      }
common optparse-applicative           { build-depends: optparse-applicative           >= 0.14       && < 0.19   }
common prettyprinter                  { build-depends: prettyprinter                  >= 1          && < 2      }
common QuickCheck                     { build-depends: QuickCheck                     >= 2.10       && < 2.15   }
common resourcet                      { build-depends: resourcet                      >= 1.1        && < 1.4    }
common scientific                     { build-depends: scientific                     >= 0.3.6.2    && < 0.4    }
common text                           { build-depends: text                           >= 1.2        && < 3      }
common transformers                   { build-depends: transformers                   >= 0.4        && < 0.7    }
common unordered-containers           { build-depends: unordered-containers           >= 0.2        && < 0.3    }
common vector                         { build-depends: vector                         >= 0.12       && < 0.14   }
common word8                          { build-depends: word8                          >= 0.1        && < 0.2    }

common config
  default-language:     Haskell2010
  ghc-options:          -Wall -O2 -msse4.2
  if flag(sse42)
    ghc-options:        -msse4.2
  if flag(bmi2) && impl(ghc >= 8.4.1)
    ghc-options:        -mbmi2 -msse4.2
    cpp-options:        -DBMI2_ENABLED

common succinct-json                  { build-depends: succinct:succinct-json                                   }
common succinct-json-simple-cursor    { build-depends: succinct:succinct-json-simple-cursor                     }
common succinct-json-standard-cursor  { build-depends: succinct:succinct-json-standard-cursor                   }
common succinct-rankselect            { build-depends: succinct:succinct-rankselect                             }
common succinct-simd                  { build-depends: succinct:succinct-simd                                   }

library succinct-json
  import:               base, config
                      , aeson
                      , attoparsec
                      , attoparsec-aeson
                      , bits-extra
                      , bytestring
                      , dlist
                      , hw-balancedparens
                      , hw-bits
                      , hw-mquery
                      , hw-parser
                      , hw-prim
                      , hw-rankselect-base
                      , mmap
                      , prettyprinter
                      , scientific
                      , succinct-json-simple-cursor
                      , succinct-json-standard-cursor
                      , succinct-rankselect
                      , succinct-simd
                      , text
                      , vector
                      , word8
  visibility:           public
  hs-source-dirs:       components/succinct-json
  other-modules:        Paths_succinct
  autogen-modules:      Paths_succinct
  exposed-modules:      HaskellWorks.Data.Json.DecodeError
                        HaskellWorks.Data.Json.FromValue
                        HaskellWorks.Data.Json.Internal.CharLike
                        HaskellWorks.Data.Json.Internal.Doc
                        HaskellWorks.Data.Json.Internal.Index
                        HaskellWorks.Data.Json.Internal.PartialIndex
                        HaskellWorks.Data.Json.Internal.Slurp
                        HaskellWorks.Data.Json.Internal.Standard.Cursor.Token
                        HaskellWorks.Data.Json.Internal.Standard.Token.Tokenize
                        HaskellWorks.Data.Json.Internal.Token
                        HaskellWorks.Data.Json.Internal.Token.Types
                        HaskellWorks.Data.Json.Internal.Value
                        HaskellWorks.Data.Json.Internal.Word64
                        HaskellWorks.Data.Json.LightJson
                        HaskellWorks.Data.Json.PartialValue
                        HaskellWorks.Data.Json.Query
                        HaskellWorks.Data.Json.Simple.Value
                        HaskellWorks.Data.Json.Standard.Load.Partial
                        HaskellWorks.Data.Json.Value

executable succinct-json-app
  import:               base, config
                      , aeson
                      , bytestring
                      , dlist
                      , generic-lens
                      , hw-balancedparens
                      , hw-json-simd
                      , hw-mquery
                      , hw-prim
                      , hw-rankselect-base
                      , lens
                      , mmap
                      , optparse-applicative
                      , succinct-json
                      , succinct-json-simple-cursor
                      , succinct-json-standard-cursor
                      , succinct-rankselect
                      , text
                      , unordered-containers
                      , vector
  main-is:              Main.hs
  hs-source-dirs:       components/succinct-json--app
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  other-modules:        App.Commands
                        App.Commands.CreateIndex
                        App.Commands.Count
                        App.Commands.CountAeson
                        App.Commands.Demo
                        App.Commands.Types

test-suite succinct-json--test
  import:               base, config
                      , aeson
                      , attoparsec
                      , attoparsec-aeson
                      , bytestring
                      , dlist
                      , hedgehog
                      , hspec
                      , hw-balancedparens
                      , hw-bits
                      , hw-hspec-hedgehog
                      , hw-mquery
                      , hw-prim
                      , hw-rankselect-base
                      , scientific
                      , succinct-json
                      , succinct-json-simple-cursor
                      , succinct-json-standard-cursor
                      , succinct-rankselect
                      , text
                      , transformers
                      , vector
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       components/succinct-json--test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover
  other-modules:        Data.Succinct.Json.LightJsonSpec
                        Data.Succinct.Json.Simple.CursorSpec
                        Data.Succinct.Json.Standard.CursorSpec
                        Data.Succinct.Json.Standard.GenCursorTest
                        Data.Succinct.Json.Token.TokenizeSpec
                        Data.Succinct.Json.TypeSpec
                        Data.Succinct.Json.ValueSpec

benchmark succinct-json--bench
  import:               base, config
                      , bytestring
                      , criterion
                      , directory
                      , mmap
                      , succinct-json
                      , succinct-json-standard-cursor
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       components/succinct-json--bench

test-suite succinct-json--doctest
  import:               base, config
                      , doctest
                      , doctest-discover
                      , succinct-json
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              DoctestDriver.hs
  HS-Source-Dirs:       components/succinct-json--doctest
  build-tool-depends:   doctest-discover:doctest-discover

library succinct-json-examples
  import:               base, config
                      , aeson
                      , bytestring
                      , dlist
                      , hw-mquery
                      , hw-prim
                      , succinct-json
                      , succinct-json-standard-cursor
  hs-source-dirs:       components/succinct-json-examples
  other-modules:        Example1
                        Example2
                        Example3
                        Example4

library succinct-json-simple-cursor
  import:               base, config
                      , bytestring
                      , hw-balancedparens
                      , hw-bits
                      , hw-prim
                      , hw-rankselect-base
                      , succinct-rankselect
                      , vector
                      , word8
  visibility:           public
  hs-source-dirs:       components/succinct-json-simple-cursor
  other-modules:        Paths_succinct
  autogen-modules:      Paths_succinct
  exposed-modules:      HaskellWorks.Data.Json.Simple.Cursor
                        HaskellWorks.Data.Json.Simple.Cursor.Fast
                        HaskellWorks.Data.Json.Simple.Cursor.Internal.IbBp
                        HaskellWorks.Data.Json.Simple.Cursor.Internal.ToIbBp
                        HaskellWorks.Data.Json.Simple.Cursor.Internal.Word8
                        HaskellWorks.Data.Json.Simple.Cursor.SemiIndex
                        HaskellWorks.Data.Json.Simple.Cursor.Snippet

executable succinct-json-simple-cursor--app
  import:               base, config
                      , bytestring
                      , generic-lens
                      , hw-balancedparens
                      , hw-json-simd
                      , hw-prim
                      , hw-rankselect-base
                      , lens
                      , mmap
                      , optparse-applicative
                      , succinct-json-simple-cursor
                      , succinct-rankselect
                      , text
                      , vector
  main-is:              Main.hs
  hs-source-dirs:       components/succinct-json-simple-cursor--app
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  other-modules:        App.Commands
                        App.Commands.CreateIndex
                        App.Commands.Types

test-suite succinct-json-simple-cursor--test
  import:               base, config
                      , bytestring
                      , hedgehog
                      , hspec
                      , hw-balancedparens
                      , hw-bits
                      , hw-hspec-hedgehog
                      , hw-prim
                      , hw-rankselect-base
                      , succinct-json-simple-cursor
                      , succinct-rankselect
                      , vector
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       components/succinct-json-simple-cursor--test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover
  other-modules:        HaskellWorks.Data.Json.Simple.CursorSpec

benchmark succinct-json-simple-cursor-bench
  import:               base, config
                      , bytestring
                      , criterion
                      , directory
                      , mmap
                      , succinct-json-simple-cursor
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       components/succinct-json-simple-cursor--bench

test-suite succinct-json-simple-cursor-doctest
  import:               base, config
                      , doctest
                      , doctest-discover
                      , succinct-json-simple-cursor
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              DoctestDriver.hs
  HS-Source-Dirs:       components/succinct-json-simple-cursor--doctest
  build-tool-depends:   doctest-discover:doctest-discover

library succinct-json-standard-cursor
  import:               base, config
                      , array
                      , bits-extra
                      , bytestring
                      , hw-balancedparens
                      , hw-bits
                      , hw-json-simd
                      , hw-prim
                      , hw-rankselect-base
                      , mmap
                      , succinct-rankselect
                      , vector
                      , word8
  hs-source-dirs:       components/succinct-json-standard-cursor
  other-modules:        Paths_succinct
  autogen-modules:      Paths_succinct
  visibility:           public
  exposed-modules:      HaskellWorks.Data.Json.Standard.Cursor
                        HaskellWorks.Data.Json.Standard.Cursor.Fast
                        HaskellWorks.Data.Json.Standard.Cursor.Generic
                        HaskellWorks.Data.Json.Standard.Cursor.IbBp
                        HaskellWorks.Data.Json.Standard.Cursor.Index
                        HaskellWorks.Data.Json.Standard.Cursor.Internal.Blank
                        HaskellWorks.Data.Json.Standard.Cursor.Internal.BlankedJson
                        HaskellWorks.Data.Json.Standard.Cursor.Internal.MakeIndex
                        HaskellWorks.Data.Json.Standard.Cursor.Internal.StateMachine
                        HaskellWorks.Data.Json.Standard.Cursor.Internal.ToBalancedParens64
                        HaskellWorks.Data.Json.Standard.Cursor.Internal.ToInterestBits64
                        HaskellWorks.Data.Json.Standard.Cursor.Internal.Word8
                        HaskellWorks.Data.Json.Standard.Cursor.Load.Cursor
                        HaskellWorks.Data.Json.Standard.Cursor.Load.Raw
                        HaskellWorks.Data.Json.Standard.Cursor.SemiIndex
                        HaskellWorks.Data.Json.Standard.Cursor.Slow
                        HaskellWorks.Data.Json.Standard.Cursor.Specific
                        HaskellWorks.Data.Json.Standard.Cursor.Type

test-suite succinct-json-standard-cursor--tests
  import:               base, config
                      , bytestring
                      , filepath
                      , hedgehog
                      , hspec
                      , hw-balancedparens
                      , hw-bits
                      , hw-hspec-hedgehog
                      , hw-prim
                      , hw-rankselect-base
                      , succinct-json-standard-cursor
                      , succinct-rankselect
                      , vector
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       components/succinct-json-standard-cursor--test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover
  other-modules:        HaskellWorks.Data.Json.Standard.CorpusSpec
                        HaskellWorks.Data.Json.Standard.Cursor.BalancedParensSpec
                        HaskellWorks.Data.Json.Standard.Cursor.InterestBitsSpec
                        HaskellWorks.Data.Json.Standard.Cursor.Internal.BlankSpec
                        HaskellWorks.Data.Json.Standard.Cursor.TypeSpec
                        HaskellWorks.Data.Json.Standard.CursorSpec
                        HaskellWorks.Data.Json.Standard.GenCursorTest

benchmark succinct-json-standard-cursor-bench
  import:               base, config
                      , bytestring
                      , criterion
                      , directory
                      , mmap
                      , succinct-json-standard-cursor
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       components/succinct-json-standard-cursor--bench

test-suite succinct-json-standard-cursor--doctest
  import:               base, config
                      , doctest
                      , doctest-discover
                      , bits-extra
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              DoctestDriver.hs
  HS-Source-Dirs:       components/succinct-json-standard-cursor--doctest
  build-tool-depends:   doctest-discover:doctest-discover

library succinct-rankselect
  import:               base, config
                      , deepseq
                      , hw-balancedparens
                      , hw-bits
                      , hw-fingertree
                      , hw-prim
                      , hw-rankselect-base
                      , vector
  visibility:           public
  exposed-modules:      HaskellWorks.Data.RankSelect.BitSeq
                        HaskellWorks.Data.RankSelect.CsPoppy
                        HaskellWorks.Data.RankSelect.CsPoppy0
                        HaskellWorks.Data.RankSelect.CsPoppy1
                        HaskellWorks.Data.RankSelect.CsPoppy.Internal.Alpha0
                        HaskellWorks.Data.RankSelect.CsPoppy.Internal.Alpha1
                        HaskellWorks.Data.RankSelect.CsPoppy.Internal.CsInterleaved
                        HaskellWorks.Data.RankSelect.CsPoppy.Internal.Lookup
                        HaskellWorks.Data.RankSelect.CsPoppy.Internal.Nice
                        HaskellWorks.Data.RankSelect.CsPoppy.Internal.Reference
                        HaskellWorks.Data.RankSelect.CsPoppy.Internal.Vector
                        HaskellWorks.Data.RankSelect.Internal.BitSeq
                        HaskellWorks.Data.RankSelect.Internal.List
                        HaskellWorks.Data.RankSelect.Internal.Word
                        HaskellWorks.Data.RankSelect.Poppy512
  other-modules:        Paths_succinct
  autogen-modules:      Paths_succinct
  hs-source-dirs:       components/succinct-rankselect

executable succinct-rankselect--app
  import:               base, config
                      , directory
                      , generic-lens
                      , hw-bits
                      , hw-prim
                      , hw-rankselect-base
                      , lens
                      , mmap
                      , mtl
                      , optparse-applicative
                      , succinct-rankselect
                      , vector
  main-is:              Main.hs
  other-modules:        App.Commands
                        App.Commands.Build
                        App.Commands.Options.Type
                        App.Commands.SelectAll
                        App.Commands.UnitTest
                        App.Commands.Validate
  hs-source-dirs:       components/succinct-rankselect--app
  default-extensions:   OverloadedStrings TupleSections
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

test-suite succinct-rankselect--test
  import:               base, config
                      , directory
                      , hedgehog
                      , hspec
                      , hw-bits
                      , hw-hedgehog
                      , hw-hspec-hedgehog
                      , hw-prim
                      , hw-rankselect-base
                      , mmap
                      , QuickCheck
                      , succinct-rankselect
                      , transformers
                      , vector
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:        HaskellWorks.Data.RankSelect.BasicGen
                        HaskellWorks.Data.RankSelect.BinarySearchSpec
                        HaskellWorks.Data.RankSelect.BitSeqSpec
                        HaskellWorks.Data.RankSelect.CsPoppy.InternalSpec
                        HaskellWorks.Data.RankSelect.CsPoppySpec
                        HaskellWorks.Data.RankSelect.Gen
                        HaskellWorks.Data.RankSelect.InternalSpec
                        HaskellWorks.Data.RankSelect.Poppy512Spec
                        HaskellWorks.Data.RankSelect.SimpleSpec
                        HaskellWorks.Data.RankSelect.SpecCommon
                        HaskellWorks.Data.RankSelect.ValidateSpec
                        Test.Common
  hs-source-dirs:       components/succinct-rankselect--test
  build-tool-depends:   hspec-discover:hspec-discover
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

benchmark succinct-rankselect--bench
  import:               base, config
                      , bytestring        
                      , conduit
                      , criterion
                      , directory
                      , hw-bits
                      , hw-prim
                      , hw-rankselect-base
                      , mmap
                      , resourcet
                      , succinct-rankselect
                      , vector
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       components/succinct-rankselect--bench
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

test-suite succinct-rankselect--doctest
  import:               base, config
                      , doctest
                      , doctest-discover
                      , succinct-rankselect
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              DoctestDriver.hs
  HS-Source-Dirs:       components/succinct-rankselect--doctest
  build-tool-depends:   doctest-discover:doctest-discover

library succinct-rankselect-gen
  import:               base, config
                      , deepseq
                      , hedgehog
                      , hspec
                      , hw-prim
                      , succinct-rankselect
                      , vector
  exposed-modules:      HaskellWorks.Data.RankSelect.Gen
  hs-source-dirs:       components/succinct-rankselect-gen

library succinct-simd
  import:               base, config
                      , bits-extra
                      , bytestring
                      , deepseq
                      , hw-bits
                      , hw-prim
                      , hw-rankselect-base
                      , succinct-rankselect
                      , transformers
                      , vector
  exposed-modules:      HaskellWorks.Data.Simd.Capabilities
                        HaskellWorks.Data.Simd.ChunkString
                        HaskellWorks.Data.Simd.Comparison
                        HaskellWorks.Data.Simd.Comparison.Avx2
                        HaskellWorks.Data.Simd.Comparison.Stock
                        HaskellWorks.Data.Simd.Internal.Bits
                        HaskellWorks.Data.Simd.Internal.Broadword
                        HaskellWorks.Data.Simd.Internal.ChunkString
                        HaskellWorks.Data.Simd.Internal.Foreign
                        HaskellWorks.Data.Simd.Internal.Marshal
                        HaskellWorks.Data.Simd.Logical
                        HaskellWorks.Data.Simd.Logical.Avx2
                        HaskellWorks.Data.Simd.Logical.Stock
  other-modules:        Paths_succinct
  autogen-modules:      Paths_succinct
  hs-source-dirs:       components/succinct-simd
  include-dirs:         components/succinct-simd--cbits
  c-sources:            components/succinct-simd--cbits/simd_avx2.c
                        components/succinct-simd--cbits/simd_sse2.c
  build-tool-depends:   c2hs:c2hs

test-suite succinct-simd--test
  import:               base, config
                      , bits-extra
                      , bytestring
                      , deepseq
                      , directory
                      , hedgehog
                      , hspec
                      , hw-bits
                      , hw-hedgehog
                      , hw-hspec-hedgehog
                      , hw-prim
                      , hw-rankselect-base
                      , lens
                      , succinct-rankselect
                      , succinct-simd
                      , text
                      , vector
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:        HaskellWorks.Data.Simd.ComparisonSpec
                        HaskellWorks.Data.Simd.Internal.BroadwordSpec
                        HaskellWorks.Data.Simd.LogicalSpec
  hs-source-dirs:       components/succinct-simd--test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover

benchmark succinct-simd--bench
  import:               base, config
                      , bits-extra
                      , bytestring
                      , cassava
                      , containers
                      , criterion
                      , deepseq
                      , directory
                      , hw-bits
                      , hw-prim
                      , hw-rankselect-base
                      , mmap
                      , succinct-rankselect
                      , succinct-simd
                      , transformers
                      , vector
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       components/succinct-simd--bench

test-suite succinct-simd--doctest
  import:               base, config
                      , doctest
                      , doctest-discover
                      , succinct-simd
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              DoctestDriver.hs
  HS-Source-Dirs:       components/succinct-simd--doctest
  build-tool-depends:   doctest-discover:doctest-discover
